--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "scripts": {
     "lint": "eslint . --ext .ts",
     "remove": "rm -rf dist",
+    "copy-gql": "cp ./src/graphql/Raffle/schema.graphql ./dist/graphql/Raffle",
     "build": "tsc",
     "server": "node ./dist/index.js",
     "ts": "ts-node ./src/index.ts",
-    "dev": "NODE_ENV=development nodemon"
+    "dev": "NODE_ENV=development nodemon",
+    "prod": "npm-run-all remove build copy-gql server"
   },
 "dependencies": {
   "@prisma/client": "^2.0.0-beta.3",
