--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "server": "node ./dist/index.js",
     "ts": "ts-node ./src/index.ts",
     "dev": "NODE_ENV=development nodemon",
-    "prod": "npm-run-all remove build copy-gql server"
+    "prod": "NODE_ENV=producction npm-run-all remove build copy-gql server"
   },
 "dependencies": {
   "@prisma/client": "^2.0.0-beta.3",
