--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Adrian Mendez <mendezadrian149@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint . --ext .ts",
+    "lint": "tslint --project .",
     "remove": "rm -rf dist",
     "copy-gql": "cp ./src/graphql/Raffle/schema.graphql ./dist/graphql/Raffle",
     "build": "tsc",
@@ -33,10 +33,11 @@
     "@types/ws": "^7.2.4",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
-    "eslint": "^7.0.0",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "ts-node": "^8.9.0",
+    "tslint": "^6.1.2",
+    "tslint-config-airbnb": "^5.11.2",
     "typescript": "^3.8.3",
     "webpack-graphql-loader": "^1.0.2"
   }
