--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "tslint --project .",
     "remove": "rm -rf dist",
     "copy-gql": "cp ./src/graphql/Raffle/schema.graphql ./dist/graphql/Raffle",
-    "build": "tsc",
-    "server": "node ./dist/index.js",
+    "compile": "tsc",
+    "server": "NODE_ENV=production node ./dist/index.js",
     "ts": "ts-node ./src/index.ts",
     "dev": "NODE_ENV=development nodemon",
-    "prod": "NODE_ENV=producction npm-run-all remove build copy-gql server"
+    "build": "npm-run-all remove compile copy-gql server"
   },
   "dependencies": {
     "@prisma/client": "^2.0.0-beta.3",
     "apollo-server": "^2.13.0",
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
+    "easygraphql-format-error": "^0.0.3",
     "graphql": "^15.0.0",
     "graphql-tools": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
