migrate to psql

--- a/prisma/.env.example
+++ b/prisma/.env.example
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://user:password@localhost:3306/pethome_raffle"
+DATABASE_URL="postgres://user:password@localhost:3306/db"
