--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "merge-graphql-schemas": "^1.7.8"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.0.0-beta.4",
+    "@prisma/cli": "^2.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/node": "^13.13.2",
