--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "graphql": "^15.0.0",
     "graphql-tools": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
-    "merge-graphql-schemas": "^1.7.8"
+    "merge-graphql-schemas": "^1.7.8",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@prisma/cli": "^2.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/node": "^13.13.2",
+    "@types/uuid": "^8.0.0",
     "@types/ws": "^7.2.4",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
