--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
      - .:/usr/src/app
     build: .
-    container_name: pethome_raffle
+    container_name: pethome_raffle_backend
     image: pethome/pethome_raffle
     depends_on:
       - postgres
@@ -15,6 +15,7 @@ services:
       
   postgres:
     image: postgres:11.2-alpine
+    container_name: pethome_raffle_postgres
     environment:
       POSTGRES_PASSWORD: postgres
     ports:
@@ -39,4 +40,3 @@ services:
 networks:
   app-network:
     driver: bridge
-    
