--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "private": true,
   "scripts": {
     "start": "yarn babel-node src/",
-    "start:dev": "nodemon --exec babel-node src/",
+    "start:dev": "yarn nodemon --exec babel-node src/",
     "test": "yarn jest"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
@@ -21,6 +24,8 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.10.1",
     "@babel/plugin-proposal-throw-expressions": "^7.10.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "babel-jest": "^24.3.1"
+    "@babel/preset-env": "^7.10.3",
+    "babel-jest": "^24.3.1",
+    "nodemon": "^2.0.4"
   }
 }
