Updating example env vars

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-SECRET_JWT=GUU**NNN**&$@
-GRAPHQL_PORT=4000
-GRAPHQL_PLAYGROUND=/playground
-DEBUG=true
-GRAPHQL_ENDPOINT=/graphql
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=temp
+DB_NAME=pethome_raffle
+DB_FORCE_RESTART=true
