Updating database schema

--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,6 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASS=temp
 DB_NAME=pethome_raffle
-DB_FORCE_RESTART=true
+
+# (Development) Remove all tables and create with seeds each time the server is restarted
+DB_FORCE_RESTART=false
