--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "yarn jest"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
